--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: moritz-linder
 github_username:  moseum-zwo
+rss: rss
 
 # Build settings
 theme: minima
