--- a/_config.yml
+++ b/_config.yml
@@ -19,16 +19,19 @@
 # in the templates via {{ site.myvariable }}.
 
 title: moseum zwo
+show_excerpts: true
 email: know-my-mail@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Ein Blog von Moritz Linder. Für Ideen und Austausch. Immer noch im
+  Aufbau.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: moritz-linder
 github_username:  moseum-zwo
 rss: rss
+google_analytics: UA-NNNNNNNN-N
+minima:
+  date_format: "%-d. %b, %Y"
 
 # Build settings
 theme: minima
